2006-12-26 Carlos Nieves Onega <cnieves@iespana.es>

	* lib/system-gschemrc.in: Don't place the titleblock automatically if
	  editing a symbol file (page filename ending in ".sym").

2006-12-23 Carlos Nieves Onega <cnieves@iespana.es>

	* src/g_hook.c (g_add_component): Return if scm_comp_name is 
	  an empty list (guile's NULL), or the scheme's boolean false.
	  This was suggested by Peter TB Brett and Steve Tell.

	* src/g_hook.c (g_add_component): 
	  Changed the end of this function to avoid the "Statement not reached"
	  compiler warning. Thanks to Dan McMahill for reporting this.

2006-12-22 Carlos Nieves Onega <cnieves@iespana.es>

	* src/g_hook.c: 
	  -  Added some documentation to custom_world_get_complex_bounds and
	     g_get_object_bounds.
	  -  g_add_component: Changed the remaining scheme function's name
	     left on 2006-12-14.

2006-12-21 Peter Brett   <peter@peter-b.co.uk>

	* src/o_copy.c, o_find.c, x_event.c: Update interface of
	o_selection_print_all() to match other o_selection_*() functions. Pass the
	GList by reference.

	* src/o_misc.c: Remove use of o_selection_select() and
	o_selection_unselect() (should only be used internally to libgeda).

	* src/o_attrib.c, src/o_buffer.c, src/o_complex.c, src/o_copy.c,
	src/o_misc.c, src/o_select.c, src/o_text.c: Update interface of
	o_selection_add() to match o_selection_remove(). Pass the GList by
	reference so head can be updated.

2006-12-21 Werner Hoch <werner.ho@gmx.de>

	* src/x_dialog.c: use GtkDialog for the find text, the show text and
	  the hide text dialog. Code cleanups.

	* src/x_autonumber.c: fixed o_selection_remove call which caused 
	  gschem to crash. suggestion by Ales, patch from Peter Brett.

	* src/x_dialog.c: cosmetics in the color dialog,
	  use GtkDialog for the hotkeys dialog, use a GList to store the
	  hotkeys and a GtkTreeView to show them.

2006-12-20 Werner Hoch <werner.ho@gmx.de>

	* src/x_dialog.c: cosmetics in the slot dialog,