@@ -1,3 +1,8 @@
+2006-12-28 Werner Hoch <werner.ho@gmx.de>
+
+	* src/x_autonumber.c: switched the autonumber dialog to GtkDialog,
+	  fixed a bug when unselecting the "remove numbers" CheckButton
+
 2006-12-26 Carlos Nieves Onega <cnieves@iespana.es>
 
 	* lib/system-gschemrc.in: Don't place the titleblock automatically if
